added follow feature + refactored code into components
